fix overflow in body

--- a/app/assets/stylesheets/monster.css
+++ b/app/assets/stylesheets/monster.css
@@ -1,6 +1,5 @@
 body {
   text-align: center;
-  overflow: hidden;
   background-color: #369;
   padding: 0; margin: 0;
   overflow-x: hidden;
